lazy flicker fix

--- a/static/style.css
+++ b/static/style.css
@@ -203,6 +203,13 @@ body {
     outline: none;
 }
 
+.main-navigation .btn:hover {
+    background-color: white;
+    color: black;
+    -webkit-box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.35);
+    box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.35);
+}
+
 input[type=number], select {
     display: inline-block;
     box-sizing: border-box;
